--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "allowUnusedLabels": false,
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "verbatimModuleSyntax": true
   },
   "include": ["src/**/*"],
