--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "@types/node": "^24.2.0",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.1",
+    "ai": "5.0.0-beta.34",
+    "dotenv": "^17.2.1",
+    "zod": "^3.25.76"
   }
 }
