--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-# This example uses Anthropic models as they're the most popular choice for common code assistance.
-# You can obtain one at https://console.anthropic.com/settings/keys
-ANTHROPIC_API_KEY="sk-xxx-xxxxxxxx"
+# This example uses OpenAI's freshly-released GPT-5 model as opposed to Claude Sonnet or Opus 4 given its
+price-to-performance ratio.
+# You can obtain one at https://platform.openai.com/
+OPENAI_API_KEY="sk-xxx-xxxxxxxx"
