--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "type": "module",
   "main": "dist/index.js",
+  "bin": {
+    "scoder": "dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
@@ -17,6 +20,14 @@
   "author": "",
   "license": "MIT",
   "packageManager": "pnpm@10.12.1",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
     "@types/node": "^24.2.0",
