--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # This example uses OpenAI's freshly-released GPT-5 model as opposed to Claude Sonnet or Opus 4 given its price-to-performance ratio.
 # You can obtain one at https://platform.openai.com/
 OPENAI_API_KEY="sk-xxx-xxxxxxxx"
+
+# Set to "true" to enable debug mode with detailed logging of tool parameters
+DEBUG="false"
