--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "lint": "biome check --write .",
     "format": "biome format --write .",
     "check": "biome check .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch"
   },
   "keywords": [],
   "author": "",
@@ -31,8 +36,11 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.3",
     "@types/node": "^24.2.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.5",
